Bug 43024 - DRHD: handling fault status reg 3
Summary: DRHD: handling fault status reg 3
Status: CLOSED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Video(DRI - Intel) (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: drivers_video-dri-intel@kernel-bugs.osdl.org
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-01 19:25 UTC by Alex Zhavnerchik
Modified: 2012-04-16 21:57 UTC (History)
2 users (show)

See Also:
Kernel Version: 3.4-rc1
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments
kernel log (85.27 KB, text/plain)
2012-04-01 19:26 UTC, Alex Zhavnerchik
Details

Description Alex Zhavnerchik 2012-04-01 19:25:39 UTC
Hi guys,

Not sure if this is yours issue just found that same errors were related to video adapters for elder kernels. Feel free to reassign this to correct person.

In attach you can find a piece of kernel log. Once I try to log into X systems hangs and log is full of following messages and grow very fast.

Apr  1 22:13:59 localhost kernel: [   16.401918] iwlwifi 0000:03:00.0: L1 Disabled; Enabling L0S
Apr  1 22:13:59 localhost kernel: [   16.402057] iwlwifi 0000:03:00.0: Radio type=0x0-0x3-0x1
Apr  1 22:13:59 localhost kernel: [   16.645293] iwlwifi 0000:03:00.0: L1 Disabled; Enabling L0S
Apr  1 22:13:59 localhost kernel: [   16.645430] iwlwifi 0000:03:00.0: Radio type=0x0-0x3-0x1
Apr  1 22:13:59 localhost kernel: [   16.750150] ADDRCONF(NETDEV_UP): wlan0: link is not ready
Apr  1 22:14:04 localhost kernel: [   21.760949] DRHD: handling fault status reg 3
Apr  1 22:14:04 localhost kernel: [   21.760959] DMAR:[DMA Write] Request device [00:02.0] fault addr 11717b000 
Apr  1 22:14:04 localhost kernel: [   21.760961] DMAR:[fault reason 05] PTE Write access is not set
Apr  1 22:14:04 localhost kernel: [   21.760966] DRHD: handling fault status reg 3
Apr  1 22:14:04 localhost kernel: [   21.760970] DMAR:[DMA Write] Request device [00:02.0] fault addr 115ecb000 
Apr  1 22:14:04 localhost kernel: [   21.760972] DMAR:[fault reason 05] PTE Write access is not set
Apr  1 22:14:04 localhost kernel: [   21.760976] DRHD: handling fault status reg 3
Comment 1 Alex Zhavnerchik 2012-04-01 19:26:28 UTC
Created attachment 72785 [details]
kernel log
Comment 2 Daniel Vetter 2012-04-01 19:31:56 UTC
VT-d in combination with Sandybridge gpus is one royal desaster. And we have no idea why exactly. Meanwhile I recommend you boot with intel_iommu=igfx_off, this will disable VT-d for the integrated gpu.

Although if you don't need VT-d I recommend to disable it completely either in the bios or with intel_iommu=off on the kernel cmdline - due to various bug reports we already have to disable quite a few performance features on the gpu.
Comment 3 Alex Zhavnerchik 2012-04-01 22:37:46 UTC
Thanks Daniel, intel_iommu=off helped. Now it works OK
Comment 4 Alex Zhavnerchik 2012-04-02 07:12:24 UTC
But BTW - it worked OK with VT-d enabled in previous kernels (3.0, 3.1, 3.2, 3.3). So - I think that is a regression
Comment 6 Florian Mickler 2012-04-16 21:16:02 UTC
A patch referencing this bug report has been merged in Linux v3.4-rc2:

commit 650dc07ec3b0eba8ff21da706d2b1876ada59fc3
Author: Daniel Vetter <daniel.vetter@ffwll.ch>
Date:   Mon Apr 2 10:08:35 2012 +0200

    drm/i915: disable ppgtt on snb when dmar is enabled

Note You need to log in before you can comment on or make changes to this bug.